--- a/Simon Game/index.html
+++ b/Simon Game/index.html
@@ -12,8 +12,9 @@
 
 <body>
   <h1 id="level-title">Press A Key to Start</h1>
+  <button class="start">Start</button>
   <div class="container">
-    <div lass="row">
+    <div class="row">
 
       <div type="button" id="green" class="btn green">
 
